Morning components livecode

--- a/index.html
+++ b/index.html
@@ -9,48 +9,51 @@
   <body>
 
     <!-- TODO: Use your components to create a simple landing page -->
-    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(images/cherry_blossoms.jpg);">
+    <div class="banner" style="background-image:linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(images/cherry_blossoms.jpg)">
       <div class="container">
-        <h1>Change your life, learn to Code</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga natus eum esse numquam?</p>
+        <h1>Change you life, learn to code</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id, perspiciatis animi error repellendus quasi non optio facilis. </p>
         <a href="#" class="btn-red">Apply Now</a>
+        
       </div>
     </div>
+
     <div class="container">
       <div class="card-trip">
-        <img src="images/sicily.jpg" alt="Sicily sea">
-        <div class="card-trip-footer">
+        <img src="images/sicily.jpg" alt="Sicily">
+        <div class="footer">
           <div>
             <h2>Trip to Sicily</h2>
-            <p>Discover this amazing island</p>
+            <p>Explore this amazing island</p>
           </div>
-          <h2>$1500</h2>
+          <h2>¥500,000</h2>
         </div>
       </div>
 
       <div class="card-trip">
-        <img src="images/sicily.jpg" alt="Sicily sea">
-        <div class="card-trip-footer">
+        <img src="images/sicily.jpg" alt="Sicily">
+        <div class="footer">
           <div>
             <h2>Trip to Sicily</h2>
-            <p>Discover this amazing island</p>
+            <p>Explore this amazing island</p>
           </div>
-          <h2>$1500</h2>
+          <h2>¥500,000</h2>
         </div>
       </div>
 
       <div class="card-trip">
-        <img src="images/sicily.jpg" alt="Sicily sea">
-        <div class="card-trip-footer">
+        <img src="images/sicily.jpg" alt="Sicily">
+        <div class="footer">
           <div>
             <h2>Trip to Sicily</h2>
-            <p>Discover this amazing island</p>
+            <p>Explore this amazing island</p>
           </div>
-          <h2>$1500</h2>
+          <h2>¥500,000</h2>
         </div>
       </div>
 
     </div>
+      
   </body>
 
 </html>
